<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/tvCat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="30dp"
        android:text="@string/category"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvMoney"
        android:layout_alignBottom="@+id/tvMoney"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:gravity="right"
        android:text="@string/time"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/tvCat"
        android:layout_below="@+id/tvCat"
        android:text="@string/expense"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>