

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/iback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:text="@string/back" />

        <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:text="@string/confirm" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10dp"
        android:background="@drawable/round_shape" >

    <TextView
        android:id="@+id/tvMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/etMoney"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvSrc"
        android:layout_marginRight="5dp"
        android:layout_marginTop="50dp"
        android:text="@string/expense"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/etSrc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/etMoney"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etMoney"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSrc"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        android:layout_toLeftOf="@+id/tvMoney"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/etTime"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/etMoney"
        android:layout_below="@+id/tvMoney"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="time" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/etTime"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvMoney"
        android:layout_marginRight="5dp"
        android:layout_marginTop="50dp"
        android:text="@string/time"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvSrc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/etSrc"
        android:layout_alignBottom="@+id/etSrc"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="false"
        android:layout_centerVertical="false"
        android:layout_marginRight="5dp"
        android:text="@string/source"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
</LinearLayout>